fixed beginner's mistake
