# src/main/java/com/dant/app/DBEndpoint.java
@@ -28,7 +28,7 @@ public class DBEndpoint {
     @GET
     @Path("/check")
     public HttpResponse checkNode(@DefaultValue("null") @HeaderParam("InternalToken") String InternalToken) {
-        if (Database.getInstance().config.SuperSecretPassphrase != InternalToken) {
+        if (!Database.getInstance().config.SuperSecretPassphrase.equals(InternalToken)) {
             throw new JsonSyntaxException("passPhraseDoesNotMatch");
         }
         return new HttpResponse("ok");
@@ -51,8 +51,8 @@ public class DBEndpoint {
 
         allCompletableFutures.thenAccept(responses ->
             responses.stream().forEach(response -> {
-                if (response.statusCode() != 200) {System.out.println(response.statusCode());
-                    responseToClient.resume(new JsonSyntaxException("one or more nodes could not be validated " + response.request().uri() + "error code " + response.statusCode()));
+                if (response.statusCode() != 200) {
+                    responseToClient.resume(new JsonSyntaxException("one or more nodes could not be validated " + response.request().uri() + "error code " + response.statusCode()) + " " + response.body());
                 }
                 Database.getInstance().allNodes.addAll(allNodes); //TODO check for duplicates
                 responseToClient.resume("ok");
